_archive/governance-services/2.3/ditamaps/index.md
# Alfresco Records Management

-   [Alfresco Records Management](../concepts/welcome-rm.md)
    -   [What's new in Alfresco Records Management](../references/whats-new-rm.md)
    -   [Records Management video tutorials](../topics/alfresco-video-tutorials-rm.md)
        -   [Create a Records Management site](../concepts/rm-tutorials-01.md)
        -   [Import Records Management test data](../concepts/rm-tutorials-02.md)
        -   [Add a record category](../concepts/rm-tutorials-03.md)
        -   [Create a disposition schedule](../concepts/rm-tutorials-04.md)
        -   [Create disposition schedule steps](../concepts/rm-tutorials-05.md)
        -   [Create a record folder](../concepts/rm-tutorials-06.md)
        -   [Set user permissions](../concepts/rm-tutorials-07.md)
        -   [File a record](../concepts/rm-tutorials-08.md)
        -   [Declare an in-place record](../concepts/rm-tutorials-09.md)
        -   [File an unfiled record](../concepts/rm-tutorials-10.md)
        -   [Add a record type](../concepts/rm-tutorials-11.md)
        -   [Edit record metadata](../concepts/rm-tutorials-12.md)
        -   [Complete a record](../concepts/rm-tutorials-13.md)
        -   [Process a record](../concepts/rm-tutorials-14.md)
    -   [Records Management QuickStart](../concepts/rm-gs-overview.md)
        -   [Life cycle of a record](../concepts/rm-record-lifecycle.md)
        -   [QuickStart for Records Managers](../concepts/rm-gs-managers.md)
            -   [Adding a record category](../tasks/rm-recordcategory-add.md)
            -   [Creating a disposition schedule](../tasks/rm-dispschedule-create.md)
            -   [Creating disposition schedule steps](../tasks/rm-dispschedule-createsteps.md)
            -   [Adding a record folder](../tasks/rm-recordfolder-add.md)
            -   [Setting user permissions](../tasks/rm-set-permissions.md)
        -   [QuickStart for Records Management Users](../concepts/rm-gs-users.md)
            -   [Filing an electronic record](../tasks/rm-electronic-file.md)
            -   [Declaring a file as a record](../tasks/rm-create-record.md)
            -   [Filing an unfiled record](../tasks/rm-file-unfiled.md)
            -   [Adding record metadata](../tasks/rm-metadata-add.md)
            -   [Editing record metadata](../tasks/rm-metadata-edit.md)
            -   [Completing a record](../tasks/rm-record-declare.md)
            -   [Processing records](../tasks/rm-dispsched-actions.md)
    -   [Using Records Management](../concepts/rm-intro.md)
        -   [Life cycle of a record](../concepts/rm-record-lifecycle.md)
        -   [The File Plan](../concepts/rm-fileplan.md)
            -   [Opening the File Plan](../tasks/rm-fileplan-access.md)
            -   [Browsing the File Plan](../concepts/rm-fileplan-browse.md)
            -   [Building the File Plan](../concepts/rm-fileplanstruct-create.md)
                -   [Loading test data](../tasks/rm-load-testdata.md)
                -   [Adding a record category](../tasks/rm-recordcategory-add.md)
                -   [Adding a record folder](../tasks/rm-recordfolder-add.md)
        -   [Disposition schedules](../concepts/rm-dispschedule.md)
            -   [Example of a disposition schedule](../references/rm-disp-example.md)
            -   [Creating a disposition schedule](../tasks/rm-dispschedule-create.md)
            -   [Creating disposition schedule steps](../tasks/rm-dispschedule-createsteps.md)
            -   [Editing a disposition schedule](../tasks/rm-dispschedule-edit.md)
        -   [Managing permissions](../concepts/rm-manage-permissions.md)
            -   [Setting user permissions](../tasks/rm-set-permissions.md)
        -   [Filing records](../concepts/rm-records-overview.md)
            -   [Filing an electronic record](../tasks/rm-electronic-file.md)
            -   [Filing a non-electronic record](../tasks/rm-nonelect-file.md)
            -   [Filing an unfiled record](../tasks/rm-file-unfiled.md)
            -   [Adding record metadata](../tasks/rm-metadata-add.md)
            -   [Editing record metadata](../tasks/rm-metadata-edit.md)
            -   [Requesting record information](../tasks/rm-records-manage-requestinfo.md)
            -   [Completing a record](../tasks/rm-record-declare.md)
        -   [Records based on existing files \(in-place records\)](../concepts/rm-in-place.md)
            -   [Declaring a file as a record](../tasks/rm-create-record.md)
            -   [Declaring a file version as a record](../tasks/rm-create-version-record.md)
            -   [Setting auto-declare options](../tasks/rm-autodeclare-options.md)
            -   [Moving in-place records](../tasks/rm-in-place-move.md)
            -   [Hiding in-place records](../tasks/rm-in-place-hide.md)
            -   [Rejected records](../references/rm-rejected-records.md)
        -   [Managing the File Plan](../concepts/rm-fileplan-manage.md)
            -   [Managing record categories](../tasks/rm-recordcategory-manage.md)
                -   [Viewing record category details](../tasks/rm-recordcategory-view.md)
                -   [Editing a record category](../tasks/rm-recordcategory-edit.md)
                -   [Deleting a record category](../tasks/rm-recordcategory-delete.md)
            -   [Managing record folders](../tasks/rm-recordfolder-manage.md)
                -   [Viewing record folders](../tasks/rm-recordfolder-view.md)
                -   [Editing a record folder](../tasks/rm-recordfolder-edit.md)
                -   [Completing folder events](../tasks/rm-recordfolder-events.md)
                -   [Editing a folder disposition date](../tasks/rm-recordfolder-editdispdate.md)
                -   [Processing records](../tasks/rm-dispsched-actions.md)
                -   [Adding record folders to a hold](../tasks/rm-recordfolder-freeze.md)
                -   [Closing a record folder](../tasks/rm-recordfolder-close.md)
                -   [Deleting a record folder](../tasks/rm-recordfolder-delete.md)
            -   [Managing records](../tasks/rm-records-manage.md)
                -   [Viewing records](../tasks/rm-records-manage-view.md)
                -   [Linking records](../tasks/rm-records-manage-link.md)
                -   [Creating relationships between records](../tasks/rm-records-manage-reference.md)
                -   [Reviewing vital records](../tasks/rm-records-manage-review.md)
                -   [Managing unfiled records](../concepts/rm-records-manage-unfiled.md)
                -   [Completing record events](../tasks/rm-records-manage-events.md)
                -   [Editing a review date](../tasks/rm-records-manage-editdate.md)
                -   [Editing a record disposition date](../tasks/rm-records-manage-dispdate.md)
                -   [Processing records](../tasks/rm-dispsched-actions.md)
                -   [Adding records to a hold](../tasks/rm-records-manage-freeze.md)
                -   [Reverting a record to be an incomplete record](../tasks/rm-records-manage-reopen.md)
                -   [Deleting records](../tasks/rm-records-manage-delete.md)
            -   [Managing records holds](../concepts/rm-manage-holds.md)
                -   [Creating holds](../tasks/rm-create-hold.md)
            -   [Exporting and importing File Plan content](../concepts/rm-export-import.md)
                -   [Exporting content](../tasks/rm-export.md)
                -   [Exporting a File Plan](../tasks/rm-export-fileplan.md)
                -   [Importing content](../tasks/rm-import.md)
        -   [Automating the File Plan](../concepts/rm-rules.md)
            -   [Defining rules for a category or folder](../concepts/rm-rules-define.md)
                -   [Creating a rule](../tasks/rm-rules-define-create.md)
                    -   [Rules autocomplete options](../references/rm-rules-substitutions.md)
                -   [Linking to an existing rule set](../tasks/rm-rules-define-link.md)
            -   [Working with a set of rules](../concepts/rm-rules-defined.md)
                -   [Adding to a set of rules](../tasks/rm-rules-new.md)
                -   [Editing a rule](../tasks/rm-rules-edit.md)
                -   [Reordering the rules in the rule set](../tasks/rm-rules-reorder.md)
                -   [Switching off inherited rules](../tasks/rm-rules-inherited.md)
                -   [Deleting a rule](../tasks/rm-rules-delete.md)
            -   [Working with linked rules](../concepts/rm-rules-linked.md)
                -   [Linking to a different rule set](../tasks/rm-rules-change-link.md)
                -   [Breaking the link to a rule set](../tasks/rm-rules-break-link.md)
        -   [Searching records](../concepts/rm-search.md)
            -   [Accessing the Records Search](../tasks/rm-search-access.md)
            -   [Creating a search](../tasks/rm-search-create.md)
                -   [Search query examples](../concepts/rm-search-examples.md)
                -   [Search field options](../concepts/rm-search-fields.md)
                -   [Search record type field options](../concepts/rm-search-specialfields.md)
            -   [Using a saved search](../tasks/rm-search-saved.md)
            -   [Saving a search](../tasks/rm-search-save.md)
            -   [Printing search results](../tasks/rm-search-print.md)
            -   [Exporting search results](../tasks/rm-search-export.md)
            -   [Deleting a saved search](../tasks/rm-search-saved-delete.md)
            -   [Adding search results to a hold](../tasks/rm-search-addhold.md)
            -   [Advanced search options](../concepts/rm-search-syntax.md)
                -   [Searching for text](../tasks/rm-search-text.md)
                -   [Search using wildcards](../tasks/rm-search-wildcards.md)
                -   [Searching for multiple fields](../tasks/rm-search-multiple.md)
                -   [Searching for phrases](../tasks/rm-search-phrases.md)
                -   [Searching for exact term](../tasks/rm-search-exactterm.md)
                -   [Searching for dates](../tasks/rm-search-dates.md)
                -   [Searching for date ranges](../tasks/rm-search-daterange.md)
                -   [Searching for special types](../tasks/rm-search-specialtypes.md)
                -   [Searching for empty strings](../tasks/rm-search-emptystring.md)
                -   [Searching for components](../tasks/rm-search-components.md)
                -   [Searching using special operators](../tasks/rm-search-operators.md)
        -   [Auditing and reporting](../concepts/rm-auditing.md)
            -   [Filing a report](../tasks/rm-file-report.md)
            -   [Viewing an audit log](../tasks/rm-audit-viewing.md)
    -   [Installing Records Management](../tasks/rm-install-proc.md)
        -   [Applying the Records Management AMP files](../tasks/rm-amp-install.md)
        -   [Creating the Records Management site](../tasks/rm-create-site.md)
        -   [Uninstalling the Records Management AMP files](../tasks/rm-amp-uninstall.md)
        -   [Supported platforms](../concepts/supported-stacks.md)
    -   [Upgrading Records Management](../tasks/rm-upgrade-proc.md)
        -   [Upgrading in-place records from pre-2.3.0.8 versions](../tasks/rm-upgrade-2308.md)
    -   [Administering Records Management](../concepts/rm-admin-intro.md)
        -   [Opening the RM Admin Tools](../tasks/rm-console-access.md)
        -   [Audit](../concepts/rm-audit-intro.md)
            -   [Running an audit](../tasks/rm-audit-access.md)
            -   [What's in an audit](../concepts/rm-audit-actions.md)
            -   [Stopping and starting the audit log](../tasks/rm-audit-startstop.md)
            -   [Filing the audit log as a record](../tasks/rm-audit-filerecord.md)
            -   [Exporting the audit log](../tasks/rm-audit-export.md)
            -   [Viewing the full log](../tasks/rm-audit-viewlog.md)
            -   [Clearing the audit log](../tasks/rm-audit-clear.md)
        -   [Custom metadata](../concepts/rm-custmeta-intro.md)
            -   [Creating custom metadata](../tasks/rm-custmeta-create.md)
            -   [Editing custom metadata](../tasks/rm-custmeta-edit.md)
        -   [Define roles](../concepts/rm-roles-intro.md)
            -   [Viewing the capabilities for a role](../tasks/rm-roles-view.md)
            -   [Adding new roles](../tasks/rm-roles-add.md)
            -   [Editing a role](../tasks/rm-roles-edit.md)
            -   [Deleting a role](../tasks/rm-roles-delete.md)
        -   [Email Mappings](../concepts/rm-emailmap-intro.md)
            -   [Adding an email map](../tasks/rm-emailmap-add.md)
            -   [Deleting an email map](../tasks/rm-emailmap-delete.md)
        -   [Events](../concepts/rm-events-intro.md)
            -   [Creating a new event](../tasks/rm-events-add.md)
            -   [Editing an event](../tasks/rm-events-edit.md)
        -   [List of values](../concepts/rm-lov-intro.md)
            -   [Creating a list of values](../tasks/rm-lov-create.md)
            -   [Editing a list of values](../tasks/rm-lov-edit.md)
            -   [Renaming a list of values](../tasks/rm-lov-rename.md)
        -   [Relationships](../concepts/rm-relationships-intro.md)
            -   [Creating a new relationship](../tasks/rm-relationships-create.md)
            -   [Editing a relationship](../tasks/rm-relationships-edit.md)
        -   [User Rights Report](../tasks/rm-userrights-view.md)
        -   [Users and groups](../concepts/rm-usergroups-intro.md)
            -   [Adding users and groups to a role](../tasks/rm-usergroups-add.md)
    -   [Copyright](../reuse/copyright.md)
    -   [Disclaimer](../reuse/disclaimer.md)

